--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "firebase": "^10.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "sass": "^1.77.6",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
